<resources>
    <string name="app_name">JoKenPo</string>
    <string name="player">Jogador</string>
    <string name="device">Dispositivo</string>
    <string name="placeholder">placeholder</string>
    <string name="scissor">Tesoura</string>
    <string name="rock">Pedra</string>
    <string name="paper">Papel</string>
    <string name="score_none">0</string>
    <string name="start_game">INICIAR JOGO</string>
</resources>

