<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JKPGame">

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="10dp"
        android:background="#ffd659"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linear_disp"
        android:layout_width="130dp"
        android:layout_height="80dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/device"
            android:textAllCaps="true"
            android:textColor="#000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/device_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/score_none"
            android:textAllCaps="true"
            android:textSize="36sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_player"
        android:layout_width="130dp"
        android:layout_height="80dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/choicePlayer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divider"
        tools:ignore="TextSizeCheck">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/player"
            android:textAllCaps="true"
            android:textColor="#000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/player_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/score_none"
            android:textAllCaps="true"
            android:textSize="36sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/playerScissor"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/scissor"
            app:icon="@drawable/scissor"
            app:iconPadding="8dp"
            app:iconTint="@null"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/playerRock"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/rock"
            app:icon="@drawable/rock"
            app:iconPadding="8dp"
            app:iconTint="@null"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/playerPaper"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/paper"
            app:icon="@drawable/paper"
            app:iconPadding="8dp"
            app:iconTint="@null"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

    <ImageView
        android:id="@+id/choicePlayer"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_weight="1"
        android:contentDescription="@string/placeholder"
        android:padding="1dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:src="@drawable/rock" />

    <ImageView
        android:id="@+id/choiceDevice"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_weight="1"
        android:contentDescription="@string/placeholder"
        android:padding="1dp"
        android:rotation="180"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_disp"
        tools:src="@drawable/rock" />

</androidx.constraintlayout.widget.ConstraintLayout>